--- a/css/style.css
+++ b/css/style.css
@@ -214,8 +214,8 @@ html, body {
 }
 
 #section1 {
-    background-color: #333;
-    color: white;
+    background-color: black;
+    color: #333;
 }
 
 #section2 {
@@ -273,4 +273,20 @@ html, body {
 
 .navbar2 {
  
+}
+
+.specBox {
+ padding: 0px;
+}
+
+.specList{
+    background: #fff;
+    border: 1px solid #ababab;
+    border-top: none;
+}
+
+.specList h3{
+    background: #eee;
+    padding: 3%;
+    margin-bottom: 0%;
 }
